# ThirdAnalyzer_v2

./: .gitignore  pyproject.toml  test.json
data/: domain_rank.json  domain_rank_100000.json
data/domains/: bank_domain_list.json  bank_domains.json  bank_list_chinese.json  random_domains.json  random_domains_list.json  xssed_domains.json  xssed_domains_list.json
data/domains/global_top2w/: formated_website_rank.json
data/domains/malicious/: malicious_domains.json
data/domains/mil_and_gov/: mil_and_gov_domains.json
data/domains/top_1k/: domain_china_1k.json
depen_analyze/: defualt_measure.py  measure.py
depen_analyze/analyze/: base_analyze.py  js_analyze.py
depen_analyze/constant/: count.py  key.py  path.py  time_const.py
depen_analyze/get_data/: ca_data.py  cdn_data.py  js_data.py  ns_data.py  soa_data.py
depen_analyze/plot/: plot_js.py
depen_analyze/utils/: base_util.py  ca_util.py  cdn_util.py  chrome_driver.py  data_reader.py  js_util.py  ns_util.py  private_analyzer.py
result/infra/ca/: all_ca.json  top_11000.json  top_13000.json  top_14000.json  top_15000.json  top_2000.json  top_20000.json  top_21000.json  top_4000.json  top_5000.json  top_6000.json  top_7000.json  top_8000.json  top_9000.json
result/infra/ns/: top_10.json  top_100.json  top_20.json  top_30.json  top_40.json  top_50.json  top_60.json  top_70.json  top_80.json  top_90.json
result/js/china_1k/: all_js.json  (+10 more)
result/soa/: soa.json
tests/: test_base_analyze.py  test_base_util.py  test_ca.py  test_js.py  test_measure.py  test_path.py  test_plot.py  test_vector_weight.py
(+329 files in other folders)
